# materials-atlas

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CITING.md  CONSTITUTION.md  CONTRIBUTING.md  COPYRIGHT.md  EDITORIAL.md  README.md  RELEASE_DRAFT_v0.1.md  RELEASE_DRAFT_v0.2.md  RELEASE_NOTES_v0.1.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  ROADMAP.md  SCIENTIFIC_SCOPE.md  lefthook.yml  pyproject.toml
.github/workflows/: validate.yml
STYLE-GUIDES/: MERMAID.md
docs/git/: COMMIT-CONVENTION.md  VERSIONING.md
docs/repository/: TOOLING.md
domains/: README.md  TEMPLATE.md
ecosystem/: README.md
ecosystem/labs/: README.md
ecosystem/researchers/: README.md
notebooks/: README.md
notebooks/foundations/: 00-python-environment.ipynb  01-linear-algebra.ipynb  02-atomic-bonding.ipynb  03-crystal-structures.ipynb
references/: README.md
references/diagrams/: README.md  foundations.md  materials-informatics.md  research-workflows.md  software-infrastructure.md  statistical-mechanics.md  thermodynamics.md
references/thermodynamics/: GLOSSARY.md  PHASE-DIAGRAMS.md  THERMODYNAMIC-QUANTITIES.md
reports/: STATUS.md
resources/: README.md
resources/books/: README.md
resources/papers/: README.md
resources/software/: README.md
resources/videos/: README.md
scripts/: __init__.py  check_commit_message.py  check_docs.py  generate_status.py
scripts/git/: check_commit_message.rb  check_docs.rb
tests/: test_check_commit_message.py  test_check_docs.py  test_generate_status.py  test_tooling_docs.py
(+18 files in other folders)
