[project]
name = "materials-atlas-tooling"
version = "0.0.0"
description = "Repository tooling for Materials Atlas."
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
]

[dependency-groups]
dev = [
  "pyright>=1.1.400",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.12",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
include = ["scripts", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["scripts"]

[tool.coverage.report]
show_missing = true
skip_covered = true
